<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mere Note</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- MainActivity note tabs title -->
    <string name="note_title">ALL NOTES</string>
    <string name="private_note_title">REMINDER NOTES</string>
    <string name="recycle_note_title">RECYCLE BIN</string>

    <!-- change color of action bar -->
    <string name="action_change_color">GREEN</string>
    <string name="title_activity_note_detail">Details</string>

    <!-- NoteFragment add new note action button -->
    <string name="action_add_note">New Note</string>
    <string name="title_activity_new_note">Edit Note</string>

    <!-- NoteFragment ActionMode action buttons -->
    <string name="action_mode_delete">Delete</string>
    <string name="action_mode_copy">Copy</string>

    <!-- NoteDetailFragment action buttons -->
    <string name="action_share_note">Share</string>
    <string name="action_reminder">Add Reminder</string>
    <string name="action_reminder_drop_down">Modify Reminder</string>
    <string name="action_modify_reminder">Modify Reminder</string>
    <string name="action_reminder_date">Reminder Date</string>
    <string name="action_remove_reminder">Remove Reminder</string>

    <!-- ActionBar action_search -->
    <string name="action_search_hint">Search Your Notes</string>
    <string name="action_search_title">Search</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    
    <string name="action_restore">Restore</string>
    
    
    <!-- test layout -->
	<string name="long_title_text">The title could also be very long like its a long long description of the text and its sometimes good to do this because you can just skim the title to know what it is about and dont care about the rest</string>
	<string name="long_date_text">the date text could also be very long who knows its monday september and stuff</string>
	<string name="long_note_text">The note is very long but you never know how long it is ahahaha so really how long can it be will it be so long that you would hate it taking up the whole screen? oh no please dont do that to me itll be a disaster</string>
	
	<string name="short_title_text">Title</string>
	<string name="short_date_text">Monday</string>
	<string name="short_note_text">Note</string>
</resources>
